objects/echosign_dev1__SIGN_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Preferred_Vendor_Request__r.Client_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <formula>Preferred_Vendor_Request__r.Opportunity_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PICO_ID_Project_Name__c</fullName>
        <formula>HYPERLINK("/" &amp; Preferred_Vendor_Request__r.PICO_ID__r.Id, Preferred_Vendor_Request__r.PICO_ID__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PICO ID / Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor_Name__c</fullName>
        <formula>HYPERLINK("/" &amp; Preferred_Vendor_Request__r.Preferred_Vendor__r.Id, Preferred_Vendor_Request__r.Preferred_Vendor__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preferred Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Vendor_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Vendor Request</label>
        <referenceTo>Preferred_Vendor_Request__c</referenceTo>
        <relationshipLabel>Agreements</relationshipLabel>
        <relationshipName>Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFID_Opportunity_ID__c</fullName>
        <formula>Preferred_Vendor_Request__r.SFID__c</formula>
        <label>SFID / Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Fees__c</fullName>
        <formula>Preferred_Vendor_Request__r.Total_Estimated_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimated Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <customHelpPage>echosign_dev1__EchoSignUserGuide</customHelpPage>
    <label>Agreement</label>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Default_View</fullName>
        <columns>NAME</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateViewed__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>echosign_dev1__Document__c</columns>
        <filterScope>Everything</filterScope>
        <label>Default View</label>
    </listViews>
    <listViews>
        <fullName>Preferred_Vendor_Requests</fullName>
        <columns>Preferred_Vendor_Request__c</columns>
        <columns>SFID_Opportunity_ID__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Opportunity_Name__c</columns>
        <columns>PICO_ID_Project_Name__c</columns>
        <columns>Preferred_Vendor_Name__c</columns>
        <columns>Total_Estimated_Fees__c</columns>
        <columns>echosign_dev1__StatusVisible__c</columns>
        <columns>echosign_dev1__DateSent__c</columns>
        <columns>echosign_dev1__DateViewed__c</columns>
        <columns>echosign_dev1__DateSigned__c</columns>
        <columns>echosign_dev1__Document__c</columns>
        <filterScope>Everything</filterScope>
        <label>Preferred Vendor Requests</label>
    </listViews>
</CustomObject>